--- a/MemoAtGlance/Base.lproj/Main.storyboard
+++ b/MemoAtGlance/Base.lproj/Main.storyboard
@@ -95,8 +95,8 @@
                                     <constraint firstAttribute="height" constant="280" id="7pr-Fi-wXM"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KGq-bp-iyP">
-                                <rect key="frame" x="93" y="374" width="46" height="40"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KGq-bp-iyP">
+                                <rect key="frame" x="94" y="374" width="44" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="j15-vu-heU"/>
                                 </constraints>
@@ -109,8 +109,8 @@
                                     <action selector="colorButtonPressed:" destination="bQW-LZ-HgX" eventType="touchUpInside" id="eGe-oZ-pSu"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tp7-hy-wmC">
-                                <rect key="frame" x="216" y="374" width="46" height="40"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tp7-hy-wmC">
+                                <rect key="frame" x="217" y="374" width="44" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="HQ2-ji-JMu"/>
                                 </constraints>
@@ -123,8 +123,8 @@
                                     <action selector="colorButtonPressed:" destination="bQW-LZ-HgX" eventType="touchUpInside" id="k0N-b9-OdW"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ZS-vc-Lp7">
-                                <rect key="frame" x="338" y="374" width="46" height="40"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ZS-vc-Lp7">
+                                <rect key="frame" x="339" y="374" width="44" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="9Zo-OQ-qEj"/>
                                 </constraints>
@@ -137,8 +137,8 @@
                                     <action selector="colorButtonPressed:" destination="bQW-LZ-HgX" eventType="touchUpInside" id="kjU-Id-aix"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zUE-Xo-eIe">
-                                <rect key="frame" x="461" y="374" width="46" height="40"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zUE-Xo-eIe">
+                                <rect key="frame" x="462" y="374" width="44" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="LhZ-hn-lUj"/>
                                 </constraints>
@@ -160,36 +160,36 @@
                                     <action selector="doneButtonPressed:" destination="bQW-LZ-HgX" eventType="touchUpInside" id="IAK-En-dWU"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QyO-I2-gNr">
-                                <rect key="frame" x="16" y="374" width="77" height="40"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QyO-I2-gNr">
+                                <rect key="frame" x="16" y="374" width="78" height="40"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="hEv-RP-DIM"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Ww-92-l1V">
-                                <rect key="frame" x="139" y="374" width="77" height="40"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Ww-92-l1V">
+                                <rect key="frame" x="138" y="374" width="79" height="40"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="8Ky-pZ-Gfn"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hDY-Ac-cng">
-                                <rect key="frame" x="262" y="374" width="76" height="40"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hDY-Ac-cng">
+                                <rect key="frame" x="261" y="374" width="78" height="40"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="kcN-fK-Ve4"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1R4-i8-DUh">
-                                <rect key="frame" x="384" y="374" width="77" height="40"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1R4-i8-DUh">
+                                <rect key="frame" x="383" y="374" width="79" height="40"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="7pU-On-oYn"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HwS-7W-q3J">
-                                <rect key="frame" x="507" y="374" width="77" height="40"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HwS-7W-q3J">
+                                <rect key="frame" x="506" y="374" width="78" height="40"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="ofu-lO-F3p"/>
